[gd_scene load_steps=9 format=3 uid="uid://gb3uok4lka6f"]

[ext_resource type="Script" path="res://scripts/world.gd" id="1_aqlu2"]
[ext_resource type="PackedScene" uid="uid://c3pnxgdny3fsl" path="res://scenes/paddle.tscn" id="2_xvuqd"]
[ext_resource type="PackedScene" uid="uid://bqi7w5e3gwe4t" path="res://scenes/game_over_layout.tscn" id="3_4msxu"]
[ext_resource type="FontFile" uid="uid://b4ct6f7o70mhd" path="res://assets/PublicPixel-z84yD.ttf" id="4_4i5yy"]
[ext_resource type="AudioStream" uid="uid://cc4kxdxsnalbb" path="res://assets/pong_score.wav" id="5_afnrf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dik4k"]
size = Vector2(1280, 90)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7on22"]
size = Vector2(90, 720)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4vymq"]
size = Vector2(1280, 140)

[node name="World" type="Node2D"]
script = ExtResource("1_aqlu2")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.172549, 0.243137, 0.313726, 1)

[node name="Walls" type="StaticBody2D" parent="."]
collision_layer = 8
collision_mask = 3

[node name="Top" type="CollisionShape2D" parent="Walls"]
position = Vector2(640, -45)
shape = SubResource("RectangleShape2D_dik4k")

[node name="Left" type="CollisionShape2D" parent="Walls"]
position = Vector2(-45, 360)
shape = SubResource("RectangleShape2D_7on22")

[node name="Right" type="CollisionShape2D" parent="Walls"]
position = Vector2(1325, 360)
shape = SubResource("RectangleShape2D_7on22")

[node name="Player" parent="." instance=ExtResource("2_xvuqd")]
position = Vector2(640, 670)

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(640, 790)
shape = SubResource("RectangleShape2D_4vymq")

[node name="GameOverLayout" parent="." instance=ExtResource("3_4msxu")]
visible = false

[node name="Lives" type="Label" parent="."]
offset_left = 20.0
offset_top = 690.0
offset_right = 95.0
offset_bottom = 705.0
theme_override_fonts/font = ExtResource("4_4i5yy")
theme_override_font_sizes/font_size = 12
text = "LIVES:"

[node name="DamageSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_afnrf")

[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
